main page and audio update

--- a/audio.html
+++ b/audio.html
@@ -29,7 +29,7 @@
             </span>
         </section>
 
-        <section class="d-flex gap-4 ">
+        <section class="d-flex gap-4 " id="services">
             <article class="fb-30">
                 <figure>
                     <img src="./assets/studio.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
