--- a/index.html
+++ b/index.html
@@ -108,14 +108,7 @@
                 </article>
                 <article class="focus-content fb-50 from-right">
                     <span>
-                        At Night Sparrow Productions, we offer a range of creative services tailored to meet your unique needs:
-
-                        <ul>
-                            <li>Video Production: From real estate to promotional campaigns and events.</li>
-                            <li>Photography: Event coverage, weddings, corporate headshots, and more.</li>
-                            <li>Audio Recording: Voiceovers, podcast production, and pro audio for video.</li>
-                            <li>Drone Videography: Stunning aerial footage for real estate and creative projects.</li>
-                        </ul>                        
+                        We offer a comprehensive range of services to meet all your creative needs. Our video production expertise spans everything from real estate showcases to promotional campaigns and event coverage. In photography, we capture memorable moments with precision, whether it’s event coverage, weddings, or professional corporate headshots. For audio recording, we specialize in voiceovers, podcast production, and delivering high-quality sound for video projects. Additionally, our drone videography provides stunning aerial footage, perfect for real estate presentations or adding a unique perspective to creative projects. 
                     </span>
                     <footer class="d-flex fj-end">
                         <a href="#" class="button mt-3 d-block">View our Work</a>
@@ -125,13 +118,13 @@
 
             <section class="focus-wrapper d-flex plr-6 gap-4 mt-3 fj-end al-f-end">
                 <article class="focus-header">
-                    <img src="./assets/monkey.jpg" alt="Night Sparrow Productions Studio" height="460">
+                    <img src="./assets/tvstudio.jpg" alt="Night Sparrow Productions Studio" height="460" width="660">
                 </article>
                 <article class="focus-content fb-50 from-right">
                     <header>
                         <span class="focus-number">02</span>
                         <hr>
-                        <h3>For Marketers</h3>
+                        <h3>Equipped for Every Need</h3>
                     </header>
                     <span>
                         Most of our work is done for, and in close collaboration with the marketing and communication teams of companies or government bodies.
@@ -146,18 +139,16 @@
 
             <section class="focus-wrapper d-flex f-r-reverse plr-6 gap-4 mt-3 fj-space-evenly al-f-end">
                 <article class="focus-header">
-                    <img src="./assets/studio.jpg" alt="Night Sparrow Productions Studio" height="460">
+                    <img src="./assets/main.jpg" alt="Night Sparrow Productions Studio" height="460" width="660">
                 </article>
                 <article class="focus-content fb-30 from-left">
                     <header>
                         <span class="focus-number">03</span>
                         <hr>
-                        <h3>Production Houses</h3>
+                        <h3>Cutting-Edge Camera Technology</h3>
                     </header>
                     <span>
-                        Our studios and network of talent in Vancouver, and across Western Canada, will ensure your project has local expertise so there are no restrictions to where your project can come to life.
-
-                        Whether it is one component of a larger campaign or legs on the ground, we are here to help.
+                        Behind every great story is a camera capable of capturing it in stunning detail. Our production team utilizes the latest in camera technology to deliver exceptional image quality, from 4K resolution to advanced stabilization. Whether you're shooting dynamic action scenes or intimate interviews, we have the tools to ensure every shot exceeds expectations. Let us help you turn your concept into a cinematic masterpiece that resonates with your audience.
                     </span>
                     <footer class="d-flex fj-end">
                         <a href="#" class="button mt-3 d-block">View our Work</a>
