Home page and audio updates

--- a/audio.html
+++ b/audio.html
@@ -35,10 +35,10 @@
                     <img src="./assets/studio.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
                     <figcaption>WINS</figcaption>
                 </figure>
-                <h4>Test</h4>
+                <h4>Voiceovers and Dialogue Replacement</h4>
                 <hr>
                 <span>
-                    With FCL, we created a video that showcased the beautiful landscapes that Co-op products enable us to visit.
+                    From narration for promotional videos to dubbing and ADR (Automated Dialogue Replacement), we deliver voiceovers that captivate your audience. Using professional-grade microphones and precise editing, we ensure every word resonates with clarity and emotion.
                 </span>
             </article>
 
@@ -47,7 +47,7 @@
                     <img src="./assets/studio.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
                     <figcaption>WINS</figcaption>
                 </figure>
-                <h4>Test</h4>
+                <h4>Podcast Recording and Mastering</h4>
                 <hr>
                 <span>
                     With FCL, we created a video that showcased the beautiful landscapes that Co-op products enable us to visit.
