--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span class="section-title d-inline-block">Our Studio</span>
             <article class="card-container m-auto d-flex gap-4">
                 <figure>
-                    <img src="./assets/studio.jpg" alt="Night Sparrow Productions Studio" height="450">
+                    <img src="./assets/cameras.jpg" alt="Night Sparrow Productions Studio" height="450">
                     <figcaption>Photo by Night Sparrow Productions Studio</figcaption>
                 </figure>
                 
@@ -53,7 +53,7 @@
             <span class="section-title d-inline-block">Our Project</span>
             <h3>Latest Work</h3>
             <section id="highlights">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/AZI3Xfp2k68?si=PxDxCBeAgpaXrmck" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe height="497" width= "884" src="https://www.youtube.com/embed/AZI3Xfp2k68?si=PxDxCBeAgpaXrmck" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p>Featured Project: WINS Holiday Campaign. We are thrilled to have partnered with WINS (Women in Need Society) on their heartwarming Hope for the Holidays campaign. This project highlights the vital role WINS plays in supporting families in need during the holiday season. Through storytelling, we captured the spirit of giving and the impact of their Gift Rooms for children. We hope this campaign drives more donations and inspires the Calgary community to come together in support of WINS’ incredible initiatives.
                 </p>
             </section>
@@ -64,7 +64,7 @@
                 
                 <article class="fb-30 past-img">
                     <figure>
-                        <img src="./assets/studio.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
+                        <img src="./assets/hopehome.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
                         <figcaption>WINS - Hope for the Holidays Campaign</figcaption>
                     </figure>
                     <span>
@@ -75,7 +75,7 @@
 
                 <article class="fb-30 past-img">
                     <figure>
-                        <img src="./assets/studio.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
+                        <img src="./assets/povertyhome.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
                         <figcaption>WINS - New Face of Poverty Campaign</figcaption>
                     </figure>
                     <span>
@@ -85,7 +85,7 @@
 
                 <article class="fb-30 past-img">
                     <figure>
-                        <img src="./assets/studio.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
+                        <img src="./assets/storehome.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
                         <figcaption>WINS - Store Opening Celebration</figcaption>
                     </figure>
                     <span>
