--- a/audio.html
+++ b/audio.html
@@ -32,7 +32,7 @@
         <section class="d-flex gap-4 " id="services">
             <article class="fb-30">
                 <figure>
-                    <img src="./assets/studio.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
+                    <img src="./assets/microphones.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
                     <figcaption>WINS</figcaption>
                 </figure>
                 <h4>Voiceovers and Dialogue Replacement</h4>
@@ -44,25 +44,25 @@
 
             <article class="fb-30">
                 <figure>
-                    <img src="./assets/studio.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
+                    <img src="./assets/mixer.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
                     <figcaption>WINS</figcaption>
                 </figure>
                 <h4>Podcast Recording and Mastering</h4>
                 <hr>
                 <span>
-                    With FCL, we created a video that showcased the beautiful landscapes that Co-op products enable us to visit.
+                    We offer a complete podcast production package, providing everything you need for a professional result. From recording, whether in-studio or remote, with high-quality equipment to ensure exceptional sound, to meticulous editing that removes unwanted noise, adjusts levels, and adds intros and outros for a seamless listening experience, we’ve got you covered. We also include mastering to polish your podcast to meet professional audio standards, ensuring it’s ready for all streaming platforms.
                 </span>
             </article>
 
             <article class="fb-30">
                 <figure>
-                    <img src="./assets/studio.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
+                    <img src="./assets/rack.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
                     <figcaption>WINS</figcaption>
                 </figure>
-                <h4>Test</h4>
+                <h4>Pro Audio for Video</h4>
                 <hr>
                 <span>
-                    With FCL, we created a video that showcased the beautiful landscapes that Co-op products enable us to visit.
+                    Great visuals deserve equally great sound, and we specialize in recording and mastering audio to complement your projects. Whether it’s talking head videos for YouTube, corporate presentations, or interviews, we ensure every word is clear and engaging. For live events or outdoor shoots, our on-location recording captures crisp sound using portable audio solutions. We also offer custom sound design, adding sound effects, ambient noise, and music to enhance the emotional impact of your video.
                 </span>
             </article>
         </section>
