renaming and photos

--- a/audio.html
+++ b/audio.html
@@ -32,7 +32,7 @@
         <section class="d-flex gap-4 " id="services">
             <article class="fb-30">
                 <figure>
-                    <img src="./assets/microphones.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
+                    <img src="./assets/microphones.jpg" alt="microphones" height="497" width="413">
                     <figcaption>WINS</figcaption>
                 </figure>
                 <h4>Voiceovers and Dialogue Replacement</h4>
@@ -44,7 +44,7 @@
 
             <article class="fb-30">
                 <figure>
-                    <img src="./assets/mixer.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
+                    <img src="./assets/mixer.jpg" alt="Audio Mixer" height="497" width="413">
                     <figcaption>WINS</figcaption>
                 </figure>
                 <h4>Podcast Recording and Mastering</h4>
@@ -56,7 +56,7 @@
 
             <article class="fb-30">
                 <figure>
-                    <img src="./assets/rack.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
+                    <img src="./assets/rack.jpg" alt="Audio equipment rack" height="497" width="413">
                     <figcaption>WINS</figcaption>
                 </figure>
                 <h4>Pro Audio for Video</h4>
