--- a/photogallery.html
+++ b/photogallery.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/photogallery.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"/>
     <script src="./script/initialize.js" defer></script>
-    <script src="./script/photography.js" defer></script>
+    <script src="./script/photogallery.js" defer></script>
 </head>
 <body>
     <header id="header-container"></header>
