--- a/photography.html
+++ b/photography.html
@@ -14,7 +14,7 @@
     <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module" defer></script>
 
     <script src="./script/initialize.js" defer></script>
-    <script src="./script/audio.js" defer></script>
+    <script src="./script/photography.js" defer></script>
 </head>
 <body>
     <header id="header-container"></header>
@@ -32,37 +32,37 @@
         <section class="d-flex gap-4 " id="services">
             <article class="fb-30">
                 <figure>
-                    <img src="./assets/microphones.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
+                    <img src="./assets/microphones.jpg" alt="two people at wins event" height="497" width="413">
                     <figcaption>WINS Womans Day Even 2024</figcaption>
                 </figure>
                 <h4>Event photography</h4>
                 <hr>
                 <span>
-                    From narration for promotional videos to dubbing and ADR (Automated Dialogue Replacement), we deliver voiceovers that captivate your audience. Using professional-grade microphones and precise editing, we ensure every word resonates with clarity and emotion.
+                    Preserve the energy and emotion of your events with stunning, candid imagery that tells the full story.
                 </span>
             </article>
 
             <article class="fb-30">
                 <figure>
-                    <img src="./assets/mixer.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
-                    <figcaption>WINS</figcaption>
+                    <img src="./assets/port.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
+                    <figcaption>Graduation</figcaption>
                 </figure>
                 <h4>Portraits and headshots</h4>
                 <hr>
                 <span>
-                    We offer a complete podcast production package, providing everything you need for a professional result. From recording, whether in-studio or remote, with high-quality equipment to ensure exceptional sound, to meticulous editing that removes unwanted noise, adjusts levels, and adds intros and outros for a seamless listening experience, we’ve got you covered. We also include mastering to polish your podcast to meet professional audio standards, ensuring it’s ready for all streaming platforms.
+                    Highlight your personality and professionalism with portraits and headshots that leave a lasting impression.
                 </span>
             </article>
 
             <article class="fb-30">
                 <figure>
-                    <img src="./assets/rack.jpg" alt="Night Sparrow Productions Studio" height="497" width="413">
-                    <figcaption>WINS</figcaption>
+                    <img src="./assets/real.jpg" alt="row of houses" height="497" width="413">
+                    <figcaption>Real Estate Photography</figcaption>
                 </figure>
                 <h4>Corporate and Real Estate photography</h4>
                 <hr>
                 <span>
-                    Great visuals deserve equally great sound, and we specialize in recording and mastering audio to complement your projects. Whether it’s talking head videos for YouTube, corporate presentations, or interviews, we ensure every word is clear and engaging. For live events or outdoor shoots, our on-location recording captures crisp sound using portable audio solutions. We also offer custom sound design, adding sound effects, ambient noise, and music to enhance the emotional impact of your video.
+                    Showcase your business or property with professional images that elevate your brand and attract clients.
                 </span>
             </article>
         </section>
