Added Kevin's work

--- a/schedule.html
+++ b/schedule.html
@@ -50,6 +50,14 @@
                         <label for="time">Preferred Time:</label>
                         <input type="time" id="time" name="time" required>
 
+                        <label for="services>">Services</label>
+                        <select id="services" name="services" required>
+                            <option value="#"> -- Please select a service -- </option>
+                            <option value="photography">Photography</option>
+                            <option value="videography">Videography</option>
+                            <option value="audio">Studio Recording</option>
+                        </select>
+
                         <button id="calendar-submit" class="button m-auto" onclick="addEvent()" type="button">Submit</button>
                     </form>
                 </aside>
