FInal content add, fixes

--- a/about.html
+++ b/about.html
@@ -40,18 +40,15 @@
                     that resonates with audiences and leaves a lasting impression.
                 </p>
             </article>
-            <figure>
-                <img src="./assets/team.jpg" alt="Night Sparrow Productions Team">
-                <figcaption>Meet our team of storytellers.</figcaption>
-            </figure>
-        </section>
-        <section class="partners">
-            <h2>Our Collaborations</h2>
+            <article>
+                <h2>Our Collaborations</h2>
             <p>
                 We are proud to have partnered with organizations like WINS (Women in Need Society) to produce impactful videos that 
-                raise awareness and foster positive change. Together, we tell stories that matter.
+                raise awareness and foster positive change. Together, we tell stories that matter. 
             </p>
+            </article>
         </section>
+        
     </main>
     <footer id="footer-container"></footer>
 </body>
