--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         Welcome to Night Sparrow Productions, Calgary’s home for creative storytelling through video, photography, and audio. Our mission is simple: to help nonprofits, small businesses, and individuals bring their ideas to life with professional, high-quality media solutions. With every project, we aim to create content that connects with audiences and inspires action.
 
                     <footer class="d-flex fj-end">
-                        <a class="button mt-3 d-block text-end" href="#">See our Studio</a>
+                        <a class="button mt-3 d-block text-end" href="#">View Our Work</a>
                     </footer>
                 </aside>
             </article>
