--- a/photography.html
+++ b/photography.html
@@ -32,7 +32,7 @@
         <section class="d-flex gap-4 " id="services">
             <article class="fb-30">
                 <figure>
-                    <img src="./assets/microphones.jpg" alt="two people at wins event" height="497" width="413">
+                    <img src="./assets/event.jpg" alt="two people at wins event" height="497" width="413">
                     <figcaption>WINS Womans Day Even 2024</figcaption>
                 </figure>
                 <h4>Event photography</h4>
