--- a/audio.html
+++ b/audio.html
@@ -20,7 +20,7 @@
     <header id="header-container"></header>
     <main>
         <section class="parallax audio-bg bg-gray">
-            <h2>Your trusted source for music collaboration</h2>
+            <h2>Your trusted source for professional-grade Audio</h2>
         </section>
 
         <section>
