--- a/audio.html
+++ b/audio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +11,16 @@
     <link rel="stylesheet" href="./css/module.css">
     <link rel="stylesheet" href="./css/state.css">
     <link rel="stylesheet" href="./css/audio.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"/>
-    <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
+    <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"
+        defer></script>
 
     <script src="./script/initialize.js" defer></script>
     <script src="./script/audio.js" defer></script>
 </head>
+
 <body>
     <header id="header-container"></header>
     <main>
@@ -25,7 +30,11 @@
 
         <section>
             <span id="message">
-                At Night Sparrow Productions, we know that great audio is the foundation of impactful media. With over 15 years of experience in audio production and mastering, we specialize in delivering professional-grade sound for videos, podcasts, and live recordings. Our studio is equipped with high-end preamps, compressors, and a diverse selection of microphones; ranging from studio condensers to dynamic and lavalier mics. We have the perfect microphone to suit any vocal style or recording need.!
+                At Night Sparrow Productions, we know that great audio is the foundation of impactful media. With over
+                15 years of experience in audio production and mastering, we specialize in delivering professional-grade
+                sound for videos, podcasts, and live recordings. Our studio is equipped with high-end preamps,
+                compressors, and a diverse selection of microphones; ranging from studio condensers to dynamic and
+                lavalier mics. We have the perfect microphone to suit any vocal style or recording need.!
             </span>
         </section>
 
@@ -38,7 +47,9 @@
                 <h4>Voiceovers and Dialogue Replacement</h4>
                 <hr>
                 <span>
-                    From narration for promotional videos to dubbing and ADR (Automated Dialogue Replacement), we deliver voiceovers that captivate your audience. Using professional-grade microphones and precise editing, we ensure every word resonates with clarity and emotion.
+                    From narration for promotional videos to dubbing and ADR (Automated Dialogue Replacement), we
+                    deliver voiceovers that captivate your audience. Using professional-grade microphones and precise
+                    editing, we ensure every word resonates with clarity and emotion.
                 </span>
             </article>
 
@@ -50,7 +61,12 @@
                 <h4>Podcast Recording and Mastering</h4>
                 <hr>
                 <span>
-                    We offer a complete podcast production package, providing everything you need for a professional result. From recording, whether in-studio or remote, with high-quality equipment to ensure exceptional sound, to meticulous editing that removes unwanted noise, adjusts levels, and adds intros and outros for a seamless listening experience, we’ve got you covered. We also include mastering to polish your podcast to meet professional audio standards, ensuring it’s ready for all streaming platforms.
+                    We offer a complete podcast production package, providing everything you need for a professional
+                    result. From recording, whether in-studio or remote, with high-quality equipment to ensure
+                    exceptional sound, to meticulous editing that removes unwanted noise, adjusts levels, and adds
+                    intros and outros for a seamless listening experience, we’ve got you covered. We also include
+                    mastering to polish your podcast to meet professional audio standards, ensuring it’s ready for all
+                    streaming platforms.
                 </span>
             </article>
 
@@ -62,11 +78,17 @@
                 <h4>Pro Audio for Video</h4>
                 <hr>
                 <span>
-                    Great visuals deserve equally great sound, and we specialize in recording and mastering audio to complement your projects. Whether it’s talking head videos for YouTube, corporate presentations, or interviews, we ensure every word is clear and engaging. For live events or outdoor shoots, our on-location recording captures crisp sound using portable audio solutions. We also offer custom sound design, adding sound effects, ambient noise, and music to enhance the emotional impact of your video.
+                    Great visuals deserve equally great sound, and we specialize in recording and mastering audio to
+                    complement your projects. Whether it’s talking head videos for YouTube, corporate presentations, or
+                    interviews, we ensure every word is clear and engaging. For live events or outdoor shoots, our
+                    on-location recording captures crisp sound using portable audio solutions. We also offer custom
+                    sound design, adding sound effects, ambient noise, and music to enhance the emotional impact of your
+                    video.
                 </span>
             </article>
         </section>
     </main>
     <footer id="footer-container"></footer>
 </body>
+
 </html>
